# Jhb-CityPower-Outages-HA

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  HACS Prompt.txt  README.md  hacs.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
custom_components/awesome_assistant/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/jhb_citypower_outages/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
devcontainer/: run_ha.sh
tests/: conftest.py  test_sensor.py
